update firebase SDK
